styling the app

--- a/src/CardComponenet.css
+++ b/src/CardComponenet.css
@@ -1,6 +1,6 @@
 .card{
     cursor: pointer;
-    background: lightgreen;
+    background: #f3916ad5;
     display: inline-block;
     border-radius: 0.5rem;
     padding: 1rem;
