working on search input to make it responsive

--- a/src/CardComponenet.css
+++ b/src/CardComponenet.css
@@ -3,6 +3,7 @@
     background: #f3916ad5;
     display: inline-block;
     border-radius: 0.5rem;
+    border-color: #c0691e;
     padding: 1rem;
     margin: 0.5rem;
     -moz-osx-font-smoothing: grayscale;
