--- a/src/components/SearchBox.css
+++ b/src/components/SearchBox.css
@@ -1,12 +1,19 @@
-.input-group-text {
-    color: #e2d8cf;
-    border: none;
-    background-color: transparent;
+.container {
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
-.searchInput {
-    width: 50%;
+input {
+    width: 20%;
     padding: 0.5rem;
+    margin: 0.5rem;
     border-color: #c0691e;
     border-radius: 0.5rem;
+}
+
+.searchLense {
+    color: #e2d3c6;
+    padding: 0.5rem;
+    margin: 0.5rem;
 }
